Bug 319815 - embedded video not playable, must open article in new tab to play
Summary: embedded video not playable, must open article in new tab to play
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL: http://feedproxy.google.com/~r/geeksA...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-14 08:04 UTC by Rich Coe
Modified: 2018-12-17 14:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (12.07 KB, image/png)
2016-01-18 02:09 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rich Coe 2013-05-14 08:04:25 UTC
Embedded video in rss feed is not playable.  I couldn't find an option that turns it on or off.
There's a complaint in another bug that a video is playing in the background.

A black box that represents the video is shown and is not clickable.

A google search turned up no solutions to this issue.

Reproducible: Always
Comment 1 Rich Coe 2013-05-14 08:05:54 UTC
bug 316278 complains that a video is playing in the background.
Comment 2 André Marcelo Alvarenga 2016-01-18 02:09:38 UTC
Created attachment 96705 [details]
Screenshot

I can reproduce using Akregator 5.1.1 (See screenshot with error message box)

You can test using http://www.noticiasautomotivas.com.br/feed and any article with "VÍDEO" in Title.
Comment 3 André Marcelo Alvarenga 2016-10-05 01:26:36 UTC
I can play videos with Akregator 5.3.0 (Applications 16.08.1)

Tested with embedded youtube videos (HTML5). Not tested with flash videos.

You can test using http://www.noticiasautomotivas.com.br/feed and any article with "VÍDEO" in Title.
Comment 4 András Manţia 2018-12-17 14:25:54 UTC
Fixed by https://phabricator.kde.org/D17638