Enable LocaStorage in webengine

Summary:
This is normally the default (but disabled in upper classes), and is needed
to play some embedded videos.
AFAIS local storage is enabled by default on all browsers.

Might fix the cookie's not remembered bug as well.

BUG: 319815
CCBUG: 379016

Reviewers: #kde_pim, mlaurent

Reviewed By: #kde_pim, mlaurent

Subscribers: kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D17638